--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -54,17 +54,33 @@
 <nav *ngIf="totalPages > 1" class="mt-4">
   <ul class="pagination justify-content-center">
     <li class="page-item" [class.disabled]="currentPage === 1">
-      <a class="page-link" (click)="changePage(currentPage - 1)">Previous</a>
+      <a
+        style="cursor: pointer"
+        class="page-link"
+        (click)="changePage(currentPage - 1)"
+        >Previous</a
+      >
     </li>
     <li
+      style="cursor: pointer"
       class="page-item"
       *ngFor="let page of [].constructor(totalPages); let i = index"
       [class.active]="currentPage === i + 1"
     >
-      <a class="page-link" (click)="changePage(i + 1)">{{ i + 1 }}</a>
+      <a
+        style="cursor: pointer"
+        class="page-link"
+        (click)="changePage(i + 1)"
+        >{{ i + 1 }}</a
+      >
     </li>
     <li class="page-item" [class.disabled]="currentPage === totalPages">
-      <a class="page-link" (click)="changePage(currentPage + 1)">Next</a>
+      <a
+        style="cursor: pointer"
+        class="page-link"
+        (click)="changePage(currentPage + 1)"
+        >Next</a
+      >
     </li>
   </ul>
 </nav>
