fixing input with keydown.enter

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,7 @@
           [(ngModel)]="noteText"
           class="form-control"
           placeholder="Tulis catatan kamu..."
+          (keydown.enter)="addNote()"
         />
       </div>
 
